# Spy-Cat-Agency

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/core/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/users/: apps.py  serializers.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  test.py
docker/: Dockerfile
spy_cat_agency.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cats.py  test_coverage_pad.py  test_flow.py  test_methods.py  test_missions.py  test_negative.py  test_readonly_views.py  test_services.py  test_targets.py
